# ChangeLog for app-crypt/johntheripper
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/johntheripper/ChangeLog,v 1.138 2012/04/07 06:38:17 radhermit Exp $

  07 Apr 2012; Tim Harder <radhermit@gentoo.org> johntheripper-1.7.6-r1.ebuild,
  johntheripper-1.7.8.ebuild, johntheripper-1.7.9.ebuild,
  johntheripper-1.7.9-r1.ebuild:
  Add slot dep for openssl.

*johntheripper-1.7.9-r1 (07 Apr 2012)

  07 Apr 2012; Tim Harder <radhermit@gentoo.org>
  +johntheripper-1.7.9-r1.ebuild:
  Revision bump. Re-add mpi support, install tgtsnarf utility, and properly
  apply system config.

  19 Mar 2012; Naohiro Aota <naota@gentoo.org> johntheripper-1.7.8.ebuild:
  Support Gentoo/FreeBSD. #319445

  05 Mar 2012; Tim Harder <radhermit@gentoo.org> johntheripper-1.7.9.ebuild:
  Use correct targets when xop and avx instructions sets are enabled (bugs
  #405927 and 405941, patch by Rick Farina).

*johntheripper-1.7.9 (23 Feb 2012)

  23 Feb 2012; Tim Harder <radhermit@gentoo.org> +johntheripper-1.7.9.ebuild:
  Version bump (bug #405101 by Renato Alves). Check for openmp toolchain
  support and remove unnecessary conditions for running tests.

*johntheripper-1.7.8 (05 Jul 2011)

  05 Jul 2011; Dane Smith <c1pher@gentoo.org> +johntheripper-1.7.8.ebuild:
  Version bump wrt bug 374123. Move to EAPI 4. Add REQUIRED_USE so that
  openmp can't be used with minimal since the community patches are what
  provied openmp support. Remove no longer needed || die.

  08 Mar 2011; Jonathan Callen <abcd@gentoo.org> johntheripper-1.7.6-r1.ebuild:
  Add prefix keywords, support

  09 Feb 2011; Dane Smith <c1pher@gentoo.org>
  -files/johntheripper-1.7.3.1-cflags.patch, -johntheripper-1.7.3.4.ebuild,
  johntheripper-1.7.6-r1.ebuild:
  *Remove altivec use flag wrt bug 353969.
  *Mark ppc/ppc64 as stable in 1.7.6-r1 with permission from ssuominen now
  that
  the altivec issues are resolved.
  *Drop old version and old patch.
