@@ -11,18 +11,18 @@ DIST john-1.7.9-jumbo-5.diff.gz 622881 RMD160 f4f0fa05558f75ec9100832b26a7ca2b25
 DIST john-1.7.9.tar.bz2 717505 RMD160 6b8bf7423d8e138c5bfa30bfd348363887e7a4c6 SHA1 8f77bdd42b7cf94ec176f55ea69c4da9b2b8fe3b SHA256 1d40083e37a7bc1ba1177651cbb27898dcf2a812b8ccf1430db0c372ac6dc199
 EBUILD johntheripper-1.7.6-r1.ebuild 4780 RMD160 de8ba3a80271098a95b7b83d33151f58aaf8d5e2 SHA1 8eaad231cd9a107c63ffedf584bfad7c3c325ff2 SHA256 cbccc9675f4246e568ad5e6da1e666b965db42c2d50aa3ad8b25d14bf6faba25
 EBUILD johntheripper-1.7.8.ebuild 4911 RMD160 1d08ad9b245c6fe437f228f575ed4c70b26a65eb SHA1 96d5c1b88f1ab34d5bde718c3248dcf777de9af8 SHA256 f20d5efe90d076625aa12cf056504cb9969d0d5e46895368fdc75eb7a3011c76
-EBUILD johntheripper-1.7.9-r1.ebuild 5009 RMD160 be74d35303bb7bf3e22c53b101cb47f13fa9ba87 SHA1 c06c5e62d27c81a17592071273b1370aca8a0244 SHA256 fe176de295ce0f0ffe4ef20e1d00c62dc0cccbbfd4124cc6fcbde1a40f3b1587
-EBUILD johntheripper-1.7.9.ebuild 4936 RMD160 7cce3a8347cee9aaebdaa73e19b532aca439a46d SHA1 f992ed110a7bf4e0d2f70f6657164d65f15d8f3e SHA256 89e4f3e47924905108fad8c109a0e783a622a9bfc2f7ac781bd004f0d845867f
-MISC ChangeLog 23060 RMD160 89bbde0bc23078500db5e9efe63d8388f400e5a2 SHA1 903305ee3f56b57334f57de21aeef157a3556887 SHA256 0a3e577fa769e4c2b3938232c5858bc32f72dc2b792a567d79aa9f153f06f97e
+EBUILD johntheripper-1.7.9-r1.ebuild 5227 RMD160 696dbcf352275252699b53ba155bf33e7e4005d9 SHA1 f6b831f79ead18638b4fddd7568e7f96da6019bc SHA256 93db40a080bedfa678a964e66edcee0b811d82a1aa197104c7ca0eb209652d8a
+EBUILD johntheripper-1.7.9.ebuild 5154 RMD160 217f4295ec12d174b77072b36644bcbbcff33468 SHA1 0197343811218b1f963fc828995cd814762d7560 SHA256 591d62091f1b13bab26d888cabaf680a1ff85367947244328ff22caf06d502c9
+MISC ChangeLog 23223 RMD160 1531a489865d23ed67a20dd3d5dccd59dd389768 SHA1 5ef26a024c4c60b76643f873de982edf9cefa29f SHA256 5d6c1294928a0e3f456dd56b6c09a64daa74c0bdb37634d5437bf9e299d8509d
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJPf+DgAAoJEEqz6FtPBkyjBooH/3khM/cjLwtuYouBscITeCtG
-9zQTV4tYSbAPfTCUrZlwk/xnFnjr3hCB3KPpyQa5QMh2sVQDiDov0EViwhxWE3Gd
-Bc4pNBrzO+m2bVa5VCJWul5dwQ4cNr8f0uRw/iqUoPFaierRV8+3bzUyzwAUu26Q
-QPCKJCG8VQIlCHqq9CC7vUSG4wocU2P0iZKY/Uw/NG2V2o1iteYuIXtdkF/iVOY/
-VEgrHr+mMuRuLK5rFU+8Euwe06JuahSKSC2vYCF9azAsuliEPcl+w5IPanYL7Mzf
-8IWFjcDDRfuVSyhIElBDiUH/Yavj5kWJdcwAZgroVTzyU0IWFxtODVxEdU3RhPc=
-=Fg/5
+iQEcBAEBCgAGBQJPf+JlAAoJEEqz6FtPBkyjuIcH/1gs1bsQC4ws9y327JSAN0bV
+NHn88856C0ZdEonXQjUjxiefZfLkVcX1hNwd+GdCcALwpOjkXJqLHLLb0sDAwsqn
+0Wl9uCEHHz8Mbzvov48Int83luFojqnJwugCopTIG8M2RAnZ/jL1q1K8yikRBAql
+liJs3MTngMjxEaqlY6QsjSVuydJA2bE1fOX5s/AbFj09KSfeUsmbf6f4/CkGZWdZ
+QbXbEvcPhpFWig1oy6VzE2UmcXtqKxJqR7lJSxVlLDkgjGl01cnnghUDyaq4tPfF
+Y2tMSIOxjomh0N5M+78STwaCOAbdTcmOA5d18FPUOM+/fIkFEfrec2mHHJqM6zg=
+=jRji
 -----END PGP SIGNATURE-----
